# s3backup

./: .gitignore
s3backup-cpp/: CMakeLists.txt
s3backup-cpp/inc/: s3_application.hpp
s3backup-cpp/src/: main.cpp  mysrv.service  s3_application.cpp
s3backup-java/: pom.xml
s3backup-java/src/main/java/com/github/alekseyburger/application/: s3backup.java
s3backup-java/src/main/java/com/github/alekseyburger/s3lib/: Backup.java
s3backup-java/src/main/resources/: log4j.properties  object.txt
